--- a/src/app/longboards/longboards-board-superfreak/longboards-board-superfreak.component.html
+++ b/src/app/longboards/longboards-board-superfreak/longboards-board-superfreak.component.html
@@ -1,8 +1,112 @@
 <div id="content">
-  <div class="top-parallax" style="background-image:url('../../../../assets/products/longboards/Avalanche/AvalancheHero16.jpg')"></div>
+  <div class="top-parallax" style="background-image:url('../../../../assets/products/longboards/Superfreak/SuperfreakHero16.jpg')"></div>
 
   <div id="main">
     <div class="container">
+
+      <div class="one_half">
+        <h3 class="title">Superfreak</h3>
+        <p class="monospace title-has-line">Cruiser/Freeride</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          The Superfreak is just that, a super freak! This single kick cruiser will never let your spirits down once you get ‘er on the street. Take Rick James’ advice, don’t bring this board home to mother. 
+        </p>
+        <br />
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+                <li><a href="http://neversummer.shptron.com/p/2016-superfreak?pp=15" target="_blank">Buy Online - Complete</a></li>
+                <li><a href="http://neversummer.shptron.com/p/2016-superfreak-deck-only?pp=15" target="_blank">Buy Online - Deck Only</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../../assets/products/longboards/Superfreak/Superfreak16_2.png" />
+      </div>
+
+      <hr>
+
+      <section class="parallax" style="background-image: url('../../../../assets/products/longboards/longboards-4.jpg'); background-position: 50% 59px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.0)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <table class="specstable">
+              <thead>
+                <tr>
+                  <td>Length</td>
+                  <td>Width</td>
+                  <td>Adjustable Wheel Base</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>36.25"</td>
+                  <td>9.625"</td>
+                  <td>21" - 24"</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <div class="one_half last" style="color:#ccc;">
+            <h3 class="title-has-line">Features</h3>
+            <ul class="spec-list">
+              <li>American Made</li>
+              <li>CNC Machined Fiberglass Reinforced Wheel Wells</li>
+              <li>1/2" Rocker</li>
+              <li>Dual Core Technology</li>
+              <li>Directional Tail Kick</li>
+              <li>Grab Rails</li>
+              <li>3-D Molded Base</li>
+              <li>Carbonium Base Finish</li>
+              <li>P-tex Nose and Tail Protection</li>
+              <li>Patented Contour Technology</li>
+            </ul>
+            <ul class="spec-list">
+              <li>4.5 lb Deck Only </li>
+              <li>8.1 lb Complete</li>
+              <li><em>All weights w/grip tape and will vary with handmade boards*</em></li>
+            </ul>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+      <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/longboards/Superfreak/superfreak2016completeview.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/longboards/Superfreak/SuperfreakView2-16.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/longboards/Superfreak/SuperfreakView3-16.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr>
+
+      <section class="parallax video-youtube" style="background-image: url('../../../../assets/products/longboards/longboards-hero.jpg');">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/cx7dontRW4k" frameborder="0" allowfullscreen></iframe>
+           </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
       
     </div>
   </div>
