--- a/src/app/longboards/longboards-board-wingman/longboards-board-wingman.component.html
+++ b/src/app/longboards/longboards-board-wingman/longboards-board-wingman.component.html
@@ -1,8 +1,107 @@
 <div id="content">
-  <div class="top-parallax" style="background-image:url('../../../../assets/products/longboards/Avalanche/AvalancheHero16.jpg')"></div>
+  <div class="top-parallax" style="background-image:url('../../../../assets/products/longboards/Hooligan/WingmanHero16.jpg')"></div>
 
   <div id="main">
     <div class="container">
+
+      <div class="one_half">
+        <h3 class="title">Wingman</h3>
+        <p class="monospace title-has-line">Downhill/Freeride</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          When you’re making moves you need a Wingman. Just the right size with a low center of gravity, this double drop freeride deck has your back when it comes to smooth stability. When you need more leverage and responsiveness out of your Wingman, top mount it and take advantage of the stance locking ‘W’ concave. No matter the situation your Wingman has your back. 
+        </p>
+        <br />
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+                <li><a href="http://neversummer.shptron.com/p/2016-wingman?pp=15" target="_blank">Buy Online - Complete</a></li>
+                <li><a href="http://neversummer.shptron.com/p/2016-wingman-deck-only?pp=15" target="_blank">Buy Online - Deck Only</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../../assets/products/longboards/Hooligan/Wingman16_2.png" />
+      </div>
+
+      <hr>
+
+      <section class="parallax" style="background-image: url('../../../../assets/products/longboards/longboards-4.jpg'); background-position: 50% 59px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.0)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <table class="specstable">
+              <thead>
+                <tr>
+                  <td>Length</td>
+                  <td>Width</td>
+                  <td>Adjustable Wheel Base</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>36.25"</td>
+                  <td>9.75"</td>
+                  <td>27.6"</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <div class="one_half last" style="color:#ccc;">
+            <h3 class="title-has-line">Features</h3>
+            <ul class="spec-list">
+              <li>American Made</li>
+              <li>3/4" Drop-Down and Drop-Thru</li>
+              <li>3/8" Rocker</li>
+              <li>'W' Concave</li>
+              <li>Composite Construction</li>
+              <li>Multi-Horizontal Maple Veneer Core Technology</li>
+              <li>Matte Finish</li>
+            </ul>
+            <ul class="spec-list">
+              <li><em>All weights w/grip tape and will vary with handmade boards*</em> </li>
+            </ul>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+      <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/longboards/Hooligan/wingman2016completeview.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/longboards/Hooligan/WingmanView2-16.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/longboards/Hooligan/WingmanView3-16.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr>
+
+      <section class="parallax video-youtube" style="background-image: url('../../../../assets/products/longboards/longboards-hero.jpg');">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/KyST02XXWDU" frameborder="0" allowfullscreen></iframe>
+           </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
       
     </div>
   </div>
