--- a/src/app/snowboards/snowboards-board-onyx/snowboards-board-onyx.component.html
+++ b/src/app/snowboards/snowboards-board-onyx/snowboards-board-onyx.component.html
@@ -1,3 +1,218 @@
-<p>
-  snowboards-board-onyx works!
-</p>
+<div id="content">
+  <div class="top-parallax" style="background-image:url('../../../assets/products/snowboards/onyx/17_JedCreative_Onyx.jpg')"></div>
+
+  <div id="main">
+    <div class="container">
+      <div class="one_half">
+        <h3 class="title">Onyx</h3>
+        <p class="monospace title-has-line">Women's Freestyle Twin</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          Play all day on the Onyx. This true twin beauty has our Original Rocker Camber Profile, Vario Power Grip Sidecut, Press Flex Core and flawless flex. The Onyx is the most crisp feeling, softest and most playful board in the women’s lineup. Rule
+          the park and show who’s boss by stomping every jump, sliding every rail and buttering down the mountain.
+        </p>
+  
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+                <li><a href="http://neversummer-snow.shptron.com/p/onyx-1?pp=16" target="_blank">Buy Now Online</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+
+        <hr class="medium" />
+        <img src="../../../assets/products/snowboards/camber-original.png" />
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../assets/products/snowboards/onyx/17Onyx.png" />
+      </div>
+
+      <hr>
+
+      <section class="parallax specsfeatures" style="background-image: url('../../../assets/products/snowboards/techspecs_parallax.jpg'); background-position: 50% -3px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.75)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <p>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Size*</td>
+                    <td>Waist</td>
+                    <td>Edge</td>
+                    <td>Sidecut**</td>
+                    <td>Tip / Tail</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>140</td>
+                    <td>23.3</td>
+                    <td>110</td>
+                    <td>Vario 700</td>
+                    <td>27.2</td>
+                  </tr>
+                  <tr>
+                    <td>143</td>
+                    <td>23.3</td>
+                    <td>113</td>
+                    <td>Vario 705</td>
+                    <td>27.4</td>
+                  </tr>
+                  <tr>
+                    <td>146</td>
+                    <td>23.4</td>
+                    <td>116</td>
+                    <td>Vario 715 </td>
+                    <td>27.6</td>
+                  </tr>
+                  <tr>
+                    <td>149</td>
+                    <td>23.4</td>
+                    <td>119</td>
+                    <td>Vario 720</td>
+                    <td>27.6</td>
+                  </tr>
+                </tbody>
+              </table>
+              <br />
+            <p>* Measurements in centimeters. ** Multiple radius average.</p>
+          </div>
+          <div class="one_half last">
+            <h3 class="title-has-line">Features</h3>
+            <div>
+              <ul>
+                <li>Matte Topsheet</li>
+                <li>Original Rocker Camber Profile</li>
+                <li>Vario Power Grip Sidecut</li>
+                <li>Low Profile Tip/Tail</li>
+                <li>Bi-Lite Fiberglass</li>
+                <li>Press Flex Core</li>
+                <li>FDS Damping System</li>
+                <li>Harmonic Tip/Tail Damper HDT</li>
+                <li>Elastomeric Underfoot Stabilizers</li>
+                <li>Sintered P-tex Sidewall</li>
+                <li>Durasurf XT Sintered 4501 Base</li>
+                <li>Full Wrap Metal Edge</li>
+              </ul>
+              <br />
+            </div>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+      <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/onyx/NS_Onyx17_1.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/onyx/NS_Onyx17_2.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/snowboards/onyx/NS_Onyx17_3.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr class="medium">
+
+      <h3 class="text-align-center title-has-line">Ride Profile</h3>
+
+      <hr class="small">
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-60.png')"></canvas>
+            <input class="knob" data-gal="60" value="60" style="width: 99px;height: 63px;position: absolute;vertical-align: middle;margin-top: 63px;margin-left: -144px;border: 0px;background: none;font-style: normal;font-variant: normal;font-weight: bold;font-stretch: normal;font-size: 38px;line-height: normal;font-family: Arial;text-align: center;color: rgb(255, 255, 255);padding: 0px;-webkit-appearance: none;">
+          </div>
+          <h5 class="radial-counter-name">Freestyle</h5>
+        </div>
+      </div>
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-40.png')"></canvas>
+            <input class="knob" data-gal="40" value="40" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+          </div>
+            <h5 class="radial-counter-name">All Mountain</h5>
+          </div>
+      </div>
+
+      <div class="one_third text-align-center last">
+        <div class="radial-counter">
+        <div style="display: inline; width: 190px; height: 190px;">
+          <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-0.png')"></canvas>
+          <input class="knob" data-gal="0" value="0" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+        </div>
+          <h5 class="radial-counter-name">Freeride</h5>
+        </div>
+      </div>
+
+      <hr class="smallline">
+
+      <div class="one_half">
+        <h5 class="text-align-center title-has-line">Flex</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="12" style="width: 12%"><strong><i>12</i></strong></span>
+            </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Soft</td>
+            <td>Mid</td>
+            <td>Mid Firm</td>
+            <td>Firm</td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="one_half last">
+        <h5 class="text-align-center title-has-line">Damp</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="12" style="width: 12%"><strong><i>12</i></strong></span>
+              </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Snappy</td>
+            <td>Mid</td>
+            <td>Smooth</td>
+            <td>Cushy</td>
+          </tr>
+        </table>
+      </div>
+
+      <hr>
+
+      <section class="parallax2 video-youtube" style="background-image: url('../../../../assets/products/snowboards/snowboardvideo-background.jpg'); background=position: 50% 21px; height: 1000px;">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/V5O015SDUKY?list=PL2klL0qFw0-955KkWBvvkRMsB-z7Umqfd" frameborder="0" allowfullscreen></iframe>
+           </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
+    </div>
+  </div>
+</div>
