--- a/src/app/snowboards/snowboards-board-proto-mini/snowboards-board-proto-mini.component.html
+++ b/src/app/snowboards/snowboards-board-proto-mini/snowboards-board-proto-mini.component.html
@@ -1,3 +1,213 @@
-<p>
-  snowboards-board-proto-mini works!
-</p>
+<div id="content">
+  <div class="top-parallax" style="background-image:url('../../../assets/products/snowboards/evomini/17_JedCreative_MiniProto.jpg')"></div>
+
+  <div id="main">
+    <div class="container">
+      <div class="one_half">
+        <h3 class="title">Mini Proto</h3>
+        <p class="monospace title-has-line">Kid's All Mountain Twin</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          The Mini Proto is the legendary Proto for kids! The Mini features a twin design, new durable textured topsheet, NS SuperLight Core, new increased damping, Original Rocker Camber Profile, and Vario Power Grip Sidecut. The Mini Proto is a super
+					stable, mid flex, all mountain twin dominator for kids. Ride anything you see. Own everything you ride.
+        </p>
+  
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+                <li><a href="http://neversummer-snow.shptron.com/p/mini-proto?pp=16" target="_blank">Buy Now Online</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+
+        <hr class="medium" />
+        <img src="../../../assets/products/snowboards/camber-original.png" />
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../assets/products/snowboards/evomini/17ProtoMini.png" />
+      </div>
+
+      <hr>
+
+      <section class="parallax specsfeatures" style="background-image: url('../../../assets/products/snowboards/techspecs_parallax.jpg'); background-position: 50% -3px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.75)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <p>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Size*</td>
+                    <td>Waist</td>
+                    <td>Edge</td>
+                    <td>Sidecut**</td>
+                    <td>Tip / Tail</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>137</td>
+                    <td>23.7</td>
+                    <td>106</td>
+                    <td>Vario 707</td>
+                    <td>27.7</td>
+                  </tr>
+                  <tr>
+                    <td>140</td>
+                    <td>24.2</td>
+                    <td>109</td>
+                    <td>Vario 725</td>
+                    <td>28.2</td>
+                  </tr>
+                  <tr>
+                    <td>144</td>
+                    <td>24.4</td>
+                    <td>112</td>
+                    <td>Vario 746</td>
+                    <td>28.3</td>
+                  </tr>
+                </tbody>
+              </table>
+              <br />
+            <p>* Measurements in centimeters. ** Multiple radius average.</p>
+          </div>
+          <div class="one_half last">
+            <h3 class="title-has-line">Features</h3>
+            <div>
+              <ul>
+                <li>TruGrit Topsheet</li>
+                <li>Carbon Max Laminate Technology</li>
+                <li>Original Rocker Camber Profile</li>
+                <li>Extended Transition Area</li>
+                <li>Vario Power Grip Sidecut</li>
+                <li>Low Profile Tip/Tail</li>
+                <li>Bi-Lite Fiberglass</li>
+                <li>NS SuperLight Wood Core</li>
+                <li>Perforated Rocker Pad</li>
+                <li>RDS 2 Damping System</li>
+                <li>Elastomeric Underfoot Stabilizers</li>
+                <li>Sintered P-tex Sidewall</li>
+                <li>Durasurf XT Sintered 5501 Base</li>
+                <li>Harmonic Tip/Tail Damper</li>
+              </ul>
+              <br />
+            </div>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+      <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/evomini/NS_MiniProto_1.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/evomini/NS_MiniProto_2.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/snowboards/evomini/NS_MiniProto_3.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr class="medium">
+
+      <h3 class="text-align-center title-has-line">Ride Profile</h3>
+
+      <hr class="small">
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-50.png')"></canvas>
+            <input class="knob" data-gal="50" value="50" style="width: 99px;height: 63px;position: absolute;vertical-align: middle;margin-top: 63px;margin-left: -144px;border: 0px;background: none;font-style: normal;font-variant: normal;font-weight: bold;font-stretch: normal;font-size: 38px;line-height: normal;font-family: Arial;text-align: center;color: rgb(255, 255, 255);padding: 0px;-webkit-appearance: none;">
+          </div>
+          <h5 class="radial-counter-name">Freestyle</h5>
+        </div>
+      </div>
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-50.png')"></canvas>
+            <input class="knob" data-gal="50" value="50" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+          </div>
+            <h5 class="radial-counter-name">All Mountain</h5>
+          </div>
+      </div>
+
+      <div class="one_third text-align-center last">
+        <div class="radial-counter">
+        <div style="display: inline; width: 190px; height: 190px;">
+          <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-0.png')"></canvas>
+          <input class="knob" data-gal="0" value="0" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+        </div>
+          <h5 class="radial-counter-name">Freeride</h5>
+        </div>
+      </div>
+
+      <hr class="smallline">
+
+      <div class="one_half">
+        <h5 class="text-align-center title-has-line">Flex</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="37" style="width: 37%"><strong><i>37</i></strong></span>
+            </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Soft</td>
+            <td>Mid</td>
+            <td>Mid Firm</td>
+            <td>Firm</td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="one_half last">
+        <h5 class="text-align-center title-has-line">Damp</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="37" style="width: 37%"><strong><i>37</i></strong></span>
+              </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Snappy</td>
+            <td>Mid</td>
+            <td>Smooth</td>
+            <td>Cushy</td>
+          </tr>
+        </table>
+      </div>
+
+      <hr>
+
+      <section class="parallax2 video-youtube" style="background-image: url('../../../../assets/products/snowboards/snowboardvideo-background.jpg'); background=position: 50% 21px; height: 1000px;">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/MMg-7KI7nSg" frameborder="0" allowfullscreen></iframe>
+           </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
+    </div>
+  </div>
+</div>
